2002-03-17  Clint Adams  <clint@zsh.org>

        * 16850: Completion/Unix/Command/_rsync: remote file completion via
	rsync and ssh, plus all options valid in rsync 2.5.2.

        * 16846: Completion/X/Command/_xdvi: complete .dvi.gz and .dvi.bz2
        too.

2002-03-10  Clint Adams  <clint@zsh.org>

        * unposted: Etc/BUGS, Etc/TODO: update relevant
	issues.

2002-03-07  Clint Adams  <clint@zsh.org>

        * 16778: Completion/Unix/Command/.distfiles,
        Completion/Unix/Command/_irssi: completion by Istvan
        Sebestyen for irssi.

2002-03-04  Peter Stephenson  <pws@csr.com>

	* 16759: Src/builtin.c: from Eric Norum <eric.norum@usask.ca>:
	cd prints output whenever the target directory is not obvious
	to the user.  This confuses scripts, so restrict it to
	interactive mode.

2002-02-19  Geoff Wing  <gcw@zsh.org>

	* 16635: Src/Zle/zle_refresh.c: make sure we display lists in
	singlelinezle mode

2002-02-18  Clint Adams  <clint@zsh.org>

	* 16662: Completion/Unix/Command/_cdcd: use parameter expansion
	instead of grep, sed, and seq.

	* Gergely Nagy, 16644: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_cdcd: completion for cdcd.

2002-02-10  Clint Adams  <clint@zsh.org>

        * Sven: 16408: Src/Zle/compcore.c: make sure auto menu
	isn't started accidentially when bashautolist is set

2002-02-09  Clint Adams  <clint@zsh.org>

	* unposted: Functions/Prompts/prompt_clint_setup: improve APM and
	screen handling.

2002-02-08  Clint Adams  <clint@zsh.org>

	* 16566, 16568, Oliver: 16461: Completion/Unix/Command/_ssh:
	improvements for scp completion.

	* Matt Zimmerman: 16590: Completion/Unix/Type/_dict_words:
	use a prefix match instead of a "fuzzy-exact" match.

2002-02-07  Clint Adams  <clint@zsh.org>

        * unposted: Functions/Prompts/.distfiles,
        Functions/Prompts/prompt_walters_setup: Colin Walters's
        prompt, adapted for the theme system.

2002-02-03  Clint Adams  <clint@zsh.org>
